Tutu 58 - Part40  hecho

--- a/MyVet.Prism/MyVet.Prism/Views/PetPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/PetPage.xaml
@@ -2,15 +2,24 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="MyVet.Prism.Views.PetPage"
              Title="{Binding Title}">
    
     <StackLayout
         Padding="10">
-        <Image
-            HeightRequest="250"
-            Source="{Binding Pet.ImageUrl}"/>
+        <ffimageloading:CachedImage
+            Aspect="AspectFill"
+    	    Source="{Binding Pet.ImageUrl}"
+    	    LoadingPlaceholder= "LoaderImage"
+    	    ErrorPlaceholder= "ErrorImage"
+    	    CacheDuration= "50"
+    	    RetryCount= "3"
+    	    RetryDelay= "600"
+    	    DownsampleToViewSize = "true"
+            HeightRequest="300"
+    	    WidthRequest="300"/>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -36,38 +45,38 @@
             <Label
                 Grid.Column="0"
                 Grid.Row="1"
+                FontAttributes="Bold"
                 Text="Race"/>
             <Label
                 Grid.Column="1"
                 Grid.Row="1"
-                FontAttributes="Bold"
                 Text="{Binding Pet.Race}"/>
             <Label
                 Grid.Column="0"
                 Grid.Row="2"
+                FontAttributes="Bold"
                 Text="Born"/>
             <Label
                 Grid.Column="1"
                 Grid.Row="2"
-                FontAttributes="Bold"
                 Text="{Binding Pet.Born, StringFormat='{0:yyyy/MM/dd}'}"/>
             <Label
                 Grid.Column="0"
                 Grid.Row="3"
+                FontAttributes="Bold"
                 Text="Pet Type"/>
             <Label
                 Grid.Column="1"
                 Grid.Row="3"
-                FontAttributes="Bold"
                 Text="{Binding Pet.PetType}"/>
             <Label
                 Grid.Column="0"
                 Grid.Row="4"
+                FontAttributes="Bold"
                 Text="Remarks"/>
             <Label
                 Grid.Column="1"
                 Grid.Row="4"
-                FontAttributes="Bold"
                 Text="{Binding Pet.Remarks}"/>
         </Grid>
     </StackLayout>
