--- a/MyVet.Prism/MyVet.Prism/Views/PetPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/PetPage.xaml
@@ -25,7 +25,7 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>ççç
+            <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
