--- a/MyVet.Prism/MyVet.Prism/Views/HistoriesPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/HistoriesPage.xaml
@@ -38,6 +38,10 @@
                 <DataTemplate>
                     <ViewCell>
                         <Grid>
+                            <Grid.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding SelectHistoryCommand}"/>
+
+                            </Grid.GestureRecognizers>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="*" />
@@ -49,7 +53,7 @@
                             </Grid.RowDefinitions>
                             <Label 
                                 Grid.Column="0"
-                                Text="{Binding DateLocal, StringFormat='{0:yyyyMM/dd}'}"
+                                Text="{Binding DateLocal, StringFormat='{0:yyyyMM/dd HH:mm}'}"
                                 VerticalOptions="Center"/>
                             <Label 
                                 Grid.Column="1"
