Part 44 - Tabbed Page-Funcionando

--- a/MyVet.Prism/MyVet.Prism/Views/HistoriesPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/HistoriesPage.xaml
@@ -4,6 +4,7 @@
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="MyVet.Prism.Views.HistoriesPage"
+             IconImageSource="ic_list"
              Title="{Binding Title}">
 
     <StackLayout
